# VMT

./: .gitignore  CMakeLists.txt  VMT.txt  VMT_bnf.txt
VMT_Test/: CMakeLists.txt
VMT_Test/Backend_Test/: CMakeLists.txt  Main.cpp
VMT_Test/Frontend_Test/: CMakeLists.txt  Env.h  IRAstVisitor.cpp  IRAstVisitor.h  Main.cpp  SymClass.h  SymFunction.h  SymNamespace.h  SymOperator.h  SymTable.h  TestAstVisitor.h
VMT_Test/IRReader_Test/: CMakeLists.txt  Main.cpp
VMT_Test/Lexer_Test/: CMakeLists.txt  Main.cpp
VMT_Test/graphviz_Test/: CMakeLists.txt  Main.cpp
src/: CMakeLists.txt  DragonBookCFG.txt
src/ADT/: CMakeLists.txt  StringRef.cpp  StringRef.h  Variant.hpp  dlink.h  flags.hpp  graphs.h  graphs_algorithm.h  graphs_toposort.h  plist.h  rbtree.hpp
src/ADT/__detail/: .__detail_graphs.h.swp  __detail_graphs.h
src/Backend/: CMakeLists.txt
src/Backend/FlowGraphDisplay/: BasicBlockDotCodeGen.h  CMakeLists.txt  DotCodeGen.h  ValueDAGCodeGen.h
src/Backend/IR/: BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  Constant.h  ConstantTable.h  FlowGraphs.cpp  FlowGraphs.h  Function.cpp  Function.h  IR.h  IRBuilder.cpp  IRBuilder.h  IRContext.cpp  IRContext.h  IROpCode.inl  InsAllocoter.h  Instruction.cpp  Instruction.h  InstructionDAG.h  LabelTable.cpp  LabelTable.h  Module.h  NameAlloc.h  OptPass.h  PseudoInsParam.inl  Scope.cpp  Scope.h  StringTable.h  Symtable.h  Type.cpp  Type.h  Users.h  Value.cpp  Value.def  Value.h  ValueDAG.cpp  ValueDAG.h  Variable.h
src/Backend/IRReader/: CMakeLists.txt  ErrorDiagnose.h  File.h  FileLocation.h  IRReader.cpp  IRReader.h  Lexer.h  Parser.cpp  Parser.h
src/Backend/IRWriter/: CMakeLists.txt  IIRWriteVisitor.h  IRWriter.cpp  IRWriter.h  TextIRWriteVisitor.cpp  TextIRWriteVisitor.h
src/Diagnose/: CMakeLists.txt  Diagnose.cpp  Diagnose.h
src/Frontend/: CMakeLists.txt
src/Frontend/AST/: AST.h  ASTVisitor.h  Ast.h  AstAssign.cpp  AstAssign.h  AstBinaryOpExpr.h  AstBlock.cpp  AstBlock.h  AstBoolConstantExpr.h  AstBreakStmt.h  AstConditionExpr.h  AstConstantExpr.h  AstContinueStmt.h  AstDecl.cpp  AstDecl.h  AstDoWhileStmt.h  AstElseStmt.h  AstExpr.cpp  AstExprStmt.h  AstExprs.h  AstForStmt.h  AstFunction.cpp  AstFunction.h  AstFunctionBody.cpp  AstFunctionBody.h  AstIfStmt.h  AstLoopStmt.h  AstNode.cpp  AstObjectExpr.h  AstPair.h  AstParamList.cpp  AstParamList.h  AstProgram.h  AstReturnStmt.h  AstStmt.cpp  AstStmts.h  AstStructure.h  AstTemp.h  AstTemplateStructure.h  AstTree.h  (+44 more)
src/Frontend/AST/AstClass/: AstClass.h  AstTemplateClass.h
src/Frontend/AST/AstExpr/: AstAssign.cpp  AstAssign.h  AstBinaryOpExpr.h  AstConditionExpr.h  AstConstantExpr.cpp  AstConstantExpr.h  AstDecl.cpp  AstDecl.h  AstExpr.cpp  AstExpr.h  AstExprs.cpp  AstExprs.h  AstObjectExpr.cpp  AstObjectExpr.h  AstTemp.h  AstUnaryOpExpr.h  AstVariableObjExpr.h  AstVoidExpr.h
src/Frontend/AST/AstFunction/: AstFunction.cpp  AstFunction.h  AstTemplateFunction.h
src/Frontend/AST/AstModule/: AstModule.h
src/Frontend/AST/AstOther/: AstAttribute.h  AstPair.h  AstParamList.cpp  AstParamList.h  AstType.cpp  AstType.h
src/Frontend/AST/AstStmt/: AstBreakStmt.h  AstContinueStmt.h  AstDoWhileStmt.h  AstElseStmt.h  AstExprStmt.h  AstForStmt.h  AstIfStmt.h  AstLoopStmt.h  AstReturnStmt.h  AstStmt.cpp  AstStmt.h  AstStmts.h  AstWhileStmt.h
src/Frontend/Lexer/: CMakeLists.txt  File.h  FileLexer.h  FileLocation.h  FileManger.h  Identifier.h  KeyWord.cpp  KeyWord.def  KeyWord.h  Lexer.cpp  Lexer.h  Tag.h  Token.h  TokenId.cpp  TokenId.h  TokenStream.h
src/Frontend/Parser/: BlockParser.h  CMakeLists.txt  FunctionParser.cpp  FunctionParser.h  ModuleParser.cpp  ModuleParser.h  Parser.h  ParserProxy.cpp  ParserProxy.h  ProgramParser.cpp  ProgramParser.h  StructClassParser.h  TokenReader.h
src/Frontend/Standard/: CMakeLists.txt  StanadardSrc.vmt  StandardType.cpp  StandardType.h
src/SymbolTable/: ArbitraryType.h  BoolType.h  CMakeLists.txt  Env.cpp  Env.h  FunctionId.cpp  FunctionId.h  Id.h  IntegerType.h  ObjectId.h  RealType.h  Symbol.cpp  Symbol.h  TopEnv.cpp  TopEnv.h  TypeId.cpp  TypeId.h  VoidType.h
src/utils/: utils.h
tests/: block1.t  block2.t  prog4.t
